# pdf2tex

./: .gitignore  README.md  convert.py  pyproject.toml  setup.sh
